# semantic-similarity-plagiarism-checker

./: README.md
document-processing/: .gitignore  README.md  pyproject.toml  requirements.txt
document-processing/sample_files/: sample_document.docx  sample_document.txt
document-processing/scripts/: setup_nltk.py
document-processing/src/: test_it.py
document-processing/src/document_preprocessor/: __init__.py  cleaner.py  cli.py  exceptions.py  extractor.py  pipeline.py  segmenter.py  validators.py
document-processing/tests/: __init__.py  fixtures.py  test_cleaner.py  test_extractor.py  test_pipeline.py  test_segmenter.py  test_validators.py
