[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "document-preprocessor"
version = "0.2.0"
description = "Document Processing module (PDF/DOCX/TXT extraction, cleaning, sentence segmentation) for the AI Plagiarism Detection System"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "nltk>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
